# ReverbAssignment

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  vcpkg.json
Backend/: go.mod  go.sum
Backend/cmd/server/: main.go
Backend/internal/handlers/: health.go  post_render.go  progress.go  result.go
Backend/internal/jobs/: model.go  runner.go
Backend/internal/util/: zip.go
Common/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Converter.cpp  Converter.h
Frontend-qt/: CMakeLists.txt  main.cpp
Frontend-qt/Core/: ReverbSetting.hpp
Frontend-qt/Widgets/: DragDropWidget.cpp  DragDropWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindwos.h
Frontend-web/: README.md  next.config.mjs  package-lock.json  package.json  powershell.txt
Frontend-web/app/: api.js  audio-uploader.jsx  page.js  render-progress.jsx  render-result-player.jsx  reverb-slider.jsx
JUCEModule/: AudioFile.cpp  AudioFile.h  CMakeLists.txt  JHeaders.h  ReverbProcessor.cpp  ReverbProcessor.h
ReverbApp/: CMakeLists.txt  main.cpp
